--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -20,11 +20,12 @@
   <string name="theme_white">Світла тема</string>
   <string name="theme_dark">Темна тема</string>
   <string name="language">Мова</string>
-  <string name="engish">Англійська</string>
+  <string name="english">Англійська</string>
   <string name="ukraine">Українська</string>
-  <string name="title">title</string>
-  <string name="body">body</string>
-  <string name="action_create">create</string>
-  <string name="action_add">add</string>
+  <string name="title">титл</string>
+  <string name="body">тіло</string>
+  <string name="action_create">створити</string>
+  <string name="action_add">добавити</string>
+  <string name="all_settings_saved">Всі налаштування збережені</string>
 
 </resources>
