refactor added Koin

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -19,7 +19,7 @@
   <string name="settings_fragment_label">Налаштування</string>
   <string name="theme_white">Світла тема</string>
   <string name="theme_dark">Темна тема</string>
-  <string name="language">Мова</string>
+  <string name="language">Англійська Мова</string>
   <string name="english">Англійська</string>
   <string name="ukraine">Українська</string>
   <string name="title">титл</string>
